force-app/src/objects/c2g__Reminder__c.object
<CustomObject>
    <description>Custom object used for logging each reminder for every run.</description>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcessStatus__c</fullName>
        <formula>TEXT(c2g__BatchProcess__r.c2g__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Reminder</relationshipLabel>
        <relationshipName>Reminder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CollectionsSpace__c</fullName>
        <label>Collections Space</label>
        <referenceTo>c2g__CollectionsSpace__c</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Reminders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorDescription__c</fullName>
        <label>Error Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Error__c</fullName>
        <label>Reminders with errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Excluded__c</fullName>
        <label>Reminders excluded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NotificationType__c</fullName>
        <formula>IF(AND(c2g__TotalNumberOfErrors__c=0,c2g__TotalNumberOfAborts__c=0,c2g__TotalNumberOfExternal__c=0),
            &apos;Successful&apos;,
            IF(c2g__TotalNumberOfErrors__c &gt; 0,
            &apos;Failure&apos;,
            IF(c2g__TotalNumberOfAborts__c &gt; 0,
            &apos;Failure&apos;,
            IF( c2g__TotalNumberOfExternal__c &gt; 0,
            &apos;Failure&apos;,
            &apos;&apos;
            )
            )
            )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessCompleted__c</fullName>
        <label>Process Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessStarted__c</fullName>
        <label>Process Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__ReminderRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reminder Rule</label>
        <referenceTo>c2g__ReminderRule__c</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Sent__c</fullName>
        <label>Reminders sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ToSend__c</fullName>
        <label>Reminders to send</label>
        <summaryFilterItems>
            <field>c2g__ReminderLog__c.c2g__Status__c</field>
            <operation>equals</operation>
            <value>To Send</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__ReminderLog__c.c2g__Reminder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>c2g__ReminderLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__ReminderLog__c.c2g__Reminder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>c2g__ReminderLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__ReminderLog__c.c2g__Reminder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>c2g__ReminderLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__ReminderLog__c.c2g__Reminder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>c2g__ReminderLog__c.c2g__Reminder__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reminder</label>
    <listViews>
        <fullName>FF_Support</fullName>
        <columns>NAME</columns>
        <columns>c2g__CollectionsSpace__c</columns>
        <columns>c2g__ReminderRule__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__Total__c</columns>
        <columns>c2g__Sent__c</columns>
        <columns>c2g__Excluded__c</columns>
        <columns>c2g__Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__ReminderRule__c</field>
            <operation>equals</operation>
            <value>US:3 Due date +34</value>
        </filters>
        <label>FF Support</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__CollectionsSpace__c</columns>
        <columns>c2g__ReminderRule__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__Total__c</columns>
        <columns>c2g__Sent__c</columns>
        <columns>c2g__Excluded__c</columns>
        <columns>c2g__Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSR-{000000000}</displayFormat>
        <label>Reminder Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>